time picker; css bug on profile: 'following # people' button; date format on searching page

--- a/media/static/style.css
+++ b/media/static/style.css
@@ -545,6 +545,7 @@ h1.entry-title {
 }
 .profile-following-button {
   margin: 10px 0 0;
+  color:white;
 }
 .layout-entry-interactions{
   background-color: white;
