--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -44,13 +44,22 @@
 <input class="form-field-regular" type = "text" name="title" placeholder="EVENT TITLE"/><br> 
 <input class="form-field-regular" type = "text" name="refer" placeholder="EVENT URL"/><br>
 <input class="form-field-regular" type = "text" name="date"  placeholder="EVENT DATE mm/dd/yyyy" id = "datepicker"/><br>
+<label class="form-label-regular" for="major">Event Time:</label>
+<select class="form-dropdown-regular" name="time" size="1">
+
+  {% for time_hour in time_hours %}
+	<option value="{{time_hour}}:00">{{time_hour}}:00</option>
+	<option value="{{time_hour}}:15">{{time_hour}}:15</option>
+	<option value="{{time_hour}}:30">{{time_hour}}:30</option>
+	<option value="{{time_hour}}:45">{{time_hour}}:45</option>
+
+  {% endfor %}
+  
+</select>
 <input class="form-field-regular" type = "text" name="loc" placeholder="EVENT LOCATION"/><br>
 <textarea class="form-textarea-regular" type = "text" name="body" row="5" placeholder="EVENT DETAIL"></textarea><br>
 
 TAGS / CATEGORIES <br>
-
-
-
 
 {% for tag in tags %}
 <input type="checkbox" id="id_{{tag}}" name="tags" value="{{tag}}" >
