--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -60,8 +60,8 @@ TAGS / CATEGORIES <br>
 {% for tag in tags %}
 <input type="checkbox" id="id_{{tag}}" name="tags" value="{{tag}}" >
 <label style="display:inline;" class="form-label-regular" for="id_{{tag}}">{{tag}}</label>
-		&nbsp;
-    		
+&nbsp;
+</input>    		
 {% endfor %}
 
 <input class="form-button-regular" type="submit" value="Submit for approval" />
