--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -40,7 +40,7 @@ $(function() {
 <div class="entry-content-block">
 <input class="form-field-regular" type="text" name="title" placeholder="EVENT TITLE"/><br> 
 <input class="form-field-regular" type="text" name="refer" placeholder="EVENT URL"/><br>
-<input class="form-field-regular" type="text" name="date"  placeholder="EVENT DATE mm/dd/yyyy" id="datepicker"/><br>
+<input class="form-field-regular" type="text" name="date"  placeholder="EVENT DATE mm/dd/yyyy" id="datepicker" readonly/><br>
 <label class="form-label-regular" for="major">Event Time:</label>
 <select class="form-dropdown-regular" name="time" size="1">
 
