--- a/templates/event/event_order.html
+++ b/templates/event/event_order.html
@@ -30,8 +30,8 @@ $(function() {
 <input class="form-field-regular" type="text" name="client_email" placeholder="EMAIL"/><br> 
 <input class="form-field-regular" type="text" name="client_org" placeholder="ORGANIZATION"/><br>
 ASUSF Sponsored? &nbsp;
-<input type="radio" name="sponsored" value="yes">Yes &nbsp;
-<input type="radio" name="sponsored" value="no" checked>No<br>
+<input type="radio" name="client_is_sponsored" value="yes">Yes &nbsp;
+<input type="radio" name="client_is_sponsored" value="no" checked>No<br>
 <br>
 
 <label class="form-label-regular">Project Information</label>
@@ -88,7 +88,7 @@ PROJECT TYPE
 </input>
 &nbsp;
 <br>
-<input class="form-field-regular" type="text" name="other" placeholder="OTHER TYPE (Please specify.)"/><br> 
+<input class="form-field-regular" type="text" name="project_other" placeholder="OTHER TYPE (Please specify.)"/><br> 
 
 <input class="form-button-regular" type="submit" value="Submit for approval" />
 </form>
