1. Untagged split error; 2. date picker default

--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -9,6 +9,7 @@
 <script>
 $(function() {
     $( "#datepicker" ).datepicker();
+    $( "#datepicker" ).datepicker('setDate', new Date());
 });
 </script>
 <!--JQuery DatePicker css and js ends-->
