--- a/templates/event/event_homepage.html
+++ b/templates/event/event_homepage.html
@@ -16,9 +16,11 @@
 
 <div class="main-item-block main-item-style post-item">
     <img class="entry-image" src="/webhost_media/{{event.image1}}" width="100%">
+    {% if request.user.is_authenticated %}
     <a href="{% url like_event event.id %}" title="Click to save this event for later">
         <div class="entry-bookmark"></div>
     </a>
+    {% endif %}
     <header class="entry-header">
         <h1 class="entry-title">
             <a href="{% url single event.id %}">{{ event.title }}</a>
