Fixed position fixed of dropdown menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
             var top_offset = $(".global-nav").height;
             $('.submenu-list').css('top', pos_t + top_offset);
             $('.submenu-list').css('left', pos_l);
-            $('.submenu-list').css('position', 'absolute');
+            $('.submenu-list').css('position', 'fixed');
             $('.submenu-list').toggle();  
         }, function(){
             /* handlerOut(eventObject) */
