--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@ Subheader here
         <h4 class="sidebar-item"><a class="sidebar-link" href="/events/tag/community">Community</a></h4>
         <h4 class="sidebar-item"><a class="sidebar-link" href="/events/tag/miscellaneous">Miscellaneous</a></h4>
         
-        <div class="sidebar-divider"><a href="">Friends' events</a></div>
+        <div class="sidebar-divider"><a href="{% url accounts.views.see_more_friends_events u.id %}">Friends' events</a></div>
     </aside><!-- .layout-sidebar-wrap -->
 
 
